force-app/main/default/objects/Contact/fields/Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Aadhar__c</fullName>
    <label>Aadhar</label>
    <length>10</length>
    <type>Text</type>
</CustomField>