force-app/main/default/objects/Contact/fields/Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check__c</fullName>
    <label>Duplicate Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar Duplicate</fullName>
            </value>
            <value>
                <fullName>Pan Duplicate</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>