force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( AccountId ) ) , MailingPostalCode  &lt;&gt;  Account.ShippingPostalCode )</errorConditionFormula>
    <errorMessage>Contact and associated Account do not have the same Mailing postal code and shipping postal code respectively.</errorMessage>
</ValidationRule>